<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:theme="@style/AppTheme"
    android:weightSum="1">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        android:weightSum="1"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/abc_action_bar_default_height_material"
            android:scaleType="center"
            android:text="@string/app_name"
            android:textStyle="bold"
            android:textSize="18sp"
            android:contentDescription="@string/app_name"
            android:layout_weight="0.9"
            android:id="@+id/dialog_header"
            android:gravity="center_vertical|center_horizontal" />
        <ImageButton
            android:id="@+id/eventdata_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/calendar_buton"
            android:layout_gravity="center_vertical"
            android:background="@color/primary"
            android:alpha="0.8"
            android:layout_weight="0.1" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/deviceID"
        android:id="@+id/dId"
        android:enabled="true"
        android:focusableInTouchMode="false"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="10dp"
        android:textColor="#ff767477" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="&lt;0328230980293>"
        android:id="@+id/dialog_devID"
        android:enabled="true"
        android:focusableInTouchMode="false"
        android:layout_marginLeft="12dp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/lastReport"
        android:id="@+id/lGps"
        android:enabled="true"
        android:focusableInTouchMode="false"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="10dp"
        android:textColor="#ff767477" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="a minte Ago"
        android:id="@+id/dialog_lastGPS"
        android:enabled="true"
        android:focusableInTouchMode="false"
        android:layout_marginLeft="12dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/GPS"
        android:id="@+id/gpos"
        android:enabled="true"
        android:focusableInTouchMode="false"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="10dp"
        android:textColor="#ff767477" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="25.3423/-100.432342"
        android:id="@+id/dialog_position"
        android:enabled="true"
        android:focusableInTouchMode="false"
        android:layout_marginLeft="12dp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/speed"
        android:id="@+id/spd"
        android:enabled="true"
        android:focusableInTouchMode="false"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="10dp"
        android:textColor="#ff767477" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="23.34 KPH"
        android:id="@+id/dialog_speed"
        android:enabled="true"
        android:focusableInTouchMode="false"
        android:layout_marginLeft="12dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        >
        <com.gc.materialdesign.views.ButtonFlat
            android:id="@+id/immobilize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/immobilize"
            android:background="@color/primary"
            android:layout_weight=".5"
            android:gravity="center_horizontal" />
        <com.gc.materialdesign.views.ButtonFlat
            android:id="@+id/mobilize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:layout_marginTop="10dp"
            android:text="@string/mobilize"
            android:background="@color/primary"
            android:gravity="center_horizontal" />




        </LinearLayout>



</LinearLayout>