<RelativeLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:weightSum="1">

    <include
        layout="@layout/toolbar"
        android:id="@+id/activity_my_toolbar">
    </include>

    <fragment
        android:id="@+id/mapHistory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        class="com.google.android.gms.maps.SupportMapFragment"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/activity_my_toolbar" />

    <LinearLayout
        android:background="@color/primary"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:alpha="0.7"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:weightSum="1"
        android:id="@+id/picker_layout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="0dp"
            android:paddingLeft="5dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/history_from"
            android:textStyle="bold"
            android:textColor="@color/common_signin_btn_dark_text_default"
            android:id="@+id/fromText" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="42dp"
                android:textColor="@color/common_signin_btn_dark_text_default"
                android:id="@+id/date_spinnerFrom"
                style="@android:style/Widget.DeviceDefault.Spinner"
                android:textStyle="bold"
                android:layout_weight=".70"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="42dp"
                android:textColor="@color/common_signin_btn_dark_text_default"
                style="@android:style/Widget.DeviceDefault.Spinner"
                android:id="@+id/time_spinnerFrom"
                android:textStyle="bold"
                android:layout_weight=".30"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/history_to"
            android:textStyle="bold"
            android:textColor="@color/common_signin_btn_dark_text_default"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="0dp"
            android:paddingLeft="5dp"
            android:id="@+id/toText" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="42dp"
                android:id="@+id/date_spinnerTo"
                style="@android:style/Widget.DeviceDefault.Spinner"
                android:textStyle="bold"
                android:textColor="@color/common_signin_btn_dark_text_default"
                android:layout_weight=".70"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="42dp"
                style="@android:style/Widget.DeviceDefault.Spinner"
                android:id="@+id/time_spinnerTo"
                android:textStyle="bold"
                android:textColor="@color/common_signin_btn_dark_text_default"
                android:layout_weight=".30"/>
        </LinearLayout>

        <Button
            android:layout_width="243dp"
            android:layout_height="41dp"
            android:text="@string/history_show"
            android:background="@color/primaryDark"
            android:textColor="@android:color/white"
            android:focusable="true"
            android:id="@+id/history_button_run"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            android:textStyle="bold" />
        <ProgressBar
            android:id="@+id/history_progress"
            style="?android:attr/progressBarStyleHorizontal"
            android:indeterminate="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:layout_marginBottom="16dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:visibility="gone"
            android:layout_weight="4" />
    </LinearLayout>

</RelativeLayout>